--- a/shop.html
+++ b/shop.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a class="primarylinks" href="">Home</a></li>
                 <li><a class="primarylinks" href="">About</a></li>
-                <li><a class="primarylinks" href="boxes.html">Gallery</a></li>
+                <li><a class="primarylinks" href="gallery.html">Gallery</a></li>
                 <li><a class="primarylinks" href="shop.html">Shop</a></li>
                 <li><a href="">Contact</a></li>
                 
